2020-03-01  6.9.11-0 Cristy  <quetzlzacatenango@image...>
  * Release ImageMagick version 6.9.11-0, GIT revision 15..

2020-03-01  6.9.11-0 Cristy  <quetzlzacatenango@image...>
  * ...

2020-02-29  6.9.10-97 Cristy  <quetzlzacatenango@image...>
  * Release ImageMagick version 6.9.10-97, GIT revision 15453:0537c847b:20200229

2020-02-24  6.9.10-97 Cristy  <quetzlzacatenango@image...>
  * Make sure we can grok this Fx expression: 1- -2.
  * Do not advance when substituting a NULL string.
  * Correct alpha for named colors in the Q32 non-HDRI build.
  * Write Group4 compressed image as a single strip.

2020-02-23  6.9.10-96 Cristy  <quetzlzacatenango@image...>
  * Release ImageMagick version 6.9.10-96, GIT revision 15438:2ef65d48e:20200223

2020-02-22  6.9.10-96 Cristy  <quetzlzacatenango@image...>
  * Adapt to a change in command-line options in the SVG inkscape delegate.

2020-02-21  6.9.10-95 Cristy  <quetzlzacatenango@image...>
  * No percent sign in lab() color.

2020-02-18  6.9.10-95 Cristy  <quetzlzacatenango@image...>
  * Adapt to a change in command-line options in the SVG inkscape delegate.

2020-02-16  6.9.10-94 Cristy  <quetzlzacatenango@image...>
  * Release ImageMagick version 6.9.10-94, GIT revision 15405:56d9955fc:20200217

2020-02-16  6.9.10-94 Cristy  <quetzlzacatenango@image...>
  * Corrected ellipse orientation when computing image moments.

2020-02-14  6.9.10-93 Cristy  <quetzlzacatenango@image...>
  * Release ImageMagick version 6.9.10-93, GIT revision 15386:2d96228:20200214

2020-02-08  6.9.10-93 Cristy  <quetzlzacatenango@image...>
  * Report gray(127.5) as gray(50%).

2020-02-07  6.9.10-92 Cristy  <quetzlzacatenango@image...>
  * Release ImageMagick version 6.9.10-92, GIT revision 15374:d468797:20200207

2020-02-03  6.9.10-92 Cristy  <quetzlzacatenango@image...>
  * More work on connect components, e.g. keep-colors, remove-colors,
    keep-topids 
  * Initialize mutex before locking if its not already initialized